--- a/deployment/ansible-vitam-extra/roles/prometheus-server/templates/prometheus.j2
+++ b/deployment/ansible-vitam-extra/roles/prometheus-server/templates/prometheus.j2
@@ -1,4 +1,4 @@
-PROMETHEUS_OPTS='--web.listen-address={{ ip_admin }}:{{prometheus.server.port}} --web.external-url={{ ip_admin }}:{{prometheus.server.port}}/prometheus --config.file=/vitam/conf/prometheus/prometheus.yml --storage.tsdb.path=/vitam/data/prometheus'
+PROMETHEUS_OPTS='--web.listen-address={{ ip_admin }}:{{prometheus.server.port}} --web.external-url=http://{{ ip_admin }}:{{prometheus.server.port}}/prometheus --config.file=/vitam/conf/prometheus/prometheus.yml --storage.tsdb.path=/vitam/data/prometheus'
 # Following params can be added
 # --web.enable-admin-api
 # --web.page-title
