Check if host already exists in the groups

--- a/deployment/ansible-vitam-extra/roles/reverse/templates/index.html.j2
+++ b/deployment/ansible-vitam-extra/roles/reverse/templates/index.html.j2
@@ -105,14 +105,14 @@
 					</p>
 {% endif %}
 
-{% if prometheus.server.enabled == true and (groups['hosts_prometheus']|length >0)  %}
+{% if prometheus.server.enabled == true and ('hosts_prometheus' in groups) and (groups['hosts_prometheus']|length >0)  %}
 					<p class="row" style="vertical-align: middle">
 						<div class="col-md-3">Prometheus server</div>
 						<div class="col-md-2"><a href="/prometheus" class="btn btn-primary btn-xs" target="_blank">Prometheus</a></div>
 					</p>
 {% endif %}
 
-{% if grafana.enabled == true and (groups['grafana']|length >0)  %}
+{% if grafana.enabled == true and ('grafana' in groups) and (groups['grafana']|length >0)  %}
 					<p class="row" style="vertical-align: middle">
 						<div class="col-md-3">Grafana</div>
 						<div class="col-md-2"><a href="/grafana" class="btn btn-primary btn-xs" target="_blank">Grafana</a></div>
