Item 6266 : Reduce lifecycle traceability operations for inactive tenants

--- a/deployment/ansible-vitam/roles/vitam/templates/logbook/logbook.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/logbook/logbook.conf.j2
@@ -108,4 +108,6 @@ operationTraceabilityTemporizationDelay: {{ vitam.logbook.operationTraceabilityT
 operationTraceabilityMaxRenewalDelay: {{ vitam.logbook.operationTraceabilityMaxRenewalDelay }}
 operationTraceabilityMaxRenewalDelayUnit: {{ vitam.logbook.operationTraceabilityMaxRenewalDelayUnit }}
 lifecycleTraceabilityTemporizationDelay: {{ vitam.logbook.lifecycleTraceabilityTemporizationDelay }}
+lifecycleTraceabilityMaxRenewalDelay: {{ vitam.logbook.lifecycleTraceabilityMaxRenewalDelay }}
+lifecycleTraceabilityMaxRenewalDelayUnit: {{ vitam.logbook.lifecycleTraceabilityMaxRenewalDelayUnit }}
 lifecycleTraceabilityMaxEntries: {{ vitam.logbook.lifecycleTraceabilityMaxEntries }}
