Item 6266 : Reduce traceability operations for logbook operations

--- a/deployment/ansible-vitam/roles/vitam/templates/logbook/logbook.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/logbook/logbook.conf.j2
@@ -105,5 +105,7 @@ alertEvents:
 
 # Traceability params
 operationTraceabilityTemporizationDelay: {{ vitam.logbook.operationTraceabilityTemporizationDelay }}
+operationTraceabilityMaxRenewalDelay: {{ vitam.logbook.operationTraceabilityMaxRenewalDelay }}
+operationTraceabilityMaxRenewalDelayUnit: {{ vitam.logbook.operationTraceabilityMaxRenewalDelayUnit }}
 lifecycleTraceabilityTemporizationDelay: {{ vitam.logbook.lifecycleTraceabilityTemporizationDelay }}
 lifecycleTraceabilityMaxEntries: {{ vitam.logbook.lifecycleTraceabilityMaxEntries }}
