--- a/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
@@ -81,6 +81,7 @@ permissionsWithoutPersonalCertificate:
   - 'switchindex:create'
   - 'reindex:create'
   - 'evidenceaudit:check'
+  - 'referentialaudit:check'
   - 'archiveunitprofiles:create:binary'
   - 'archiveunitprofiles:create:json'
   - 'archiveunitprofiles:read'
