Revert "add .yml files"
This reverts commit 1d925aa58c4a28bc2d700640412ec13a73270179.

--- a/deployment/ansible-vitam/roles/vitam/templates/metadata/metadata.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/metadata/metadata.conf.j2
@@ -115,3 +115,19 @@ elasticsearchTenantIndexation:
 adminBasicAuth:
 - userName: {{ admin_basic_auth_user }}
   password: {{ admin_basic_auth_password }}
+
+isDataConsistencyAuditRunnable: {{ vitam.metadata.isDataConsistencyAuditRunnable }}
+dataConsistencyAuditOplogMaxSize: {{ vitam.metadata.dataConsistencyAuditOplogMaxSize }}
+mongodShardsConf:
+ dbUserName: {{ mongodb['mongo-data'].admin.user }}
+ dbPassword: {{ mongodb['mongo-data'].admin.password }}
+ dbSslAuthentication: {{ mongodb.mongo_authentication }}
+ mongoDbShards:
+{% for shard in groups['hosts_mongod_data'] %}
+   - shardName: shard{{ hostvars[shard]['mongo_shard_id']}}
+     mongoDbNodes:
+{% for server in groups['hosts_mongod_data'] %}
+      - dbHost: {{ hostvars[server]['ip_service'] }}
+        dbPort: {{ mongodb.mongos_port }}
+{% endfor %}
+{% endfor %}
