Item #7269 : Add schema validation + access ressource  external

--- a/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
@@ -24,6 +24,7 @@ permissionsWithoutPersonalCertificate:
   - 'units:update:revert'
   - 'unitsWithInheritedRules:read'
   - 'units:rules:update'
+  - 'units:bulk:update'
   - 'accesscontracts:create:json'
   - 'accesscontracts:read'
   - 'accesscontracts:id:read'
