Item 6911 : Limit parallel storage write/access logs threads

--- a/deployment/ansible-vitam/roles/vitam/templates/storage/storage.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/storage/storage.conf.j2
@@ -12,6 +12,7 @@ offerSyncThreadPoolSize: {{ vitam.storageengine.offerSyncThreadPoolSize }}
 offerSyncNumberOfRetries: {{ vitam.storageengine.offerSyncNumberOfRetries }}
 offerSyncFirstAttemptWaitingTime: {{ vitam.storageengine.offerSyncFirstAttemptWaitingTime }}
 offerSyncWaitingTime: {{ vitam.storageengine.offerSyncWaitingTime }}
+storageLogBackupThreadPoolSize: {{ vitam.storageengine.storageLogBackupThreadPoolSize }}
 #Basic Authentication
 adminBasicAuth:
 - userName: {{ admin_basic_auth_user }}
