Item 7269 : Concurrent update for
+ Concurrent execution of select queries
+ BatchReport idempotency (using queryIndex as report entry "id")
+ Configuration
+ Fixmes

--- a/deployment/ansible-vitam/roles/vitam/templates/vitam.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/vitam.conf.j2
@@ -26,6 +26,10 @@ forceChunkModeInputStream : {{ vitam_defaults.vitam_force_chunk_mode }}
 reclassificationMaxBulkThreshold: 1000
 reclassificationMaxUnitsThreshold: 10000
 reclassificationMaxGuildListSizeInLogbookOperation: 1000
+queriesThreshold: {{ vitam.worker.queriesThreshold }}
+bulkAtomicUpdateBatchSize: {{ vitam.worker.bulkAtomicUpdateBatchSize }}
+bulkAtomicUpdateThreadPoolSize: {{ vitam.worker.bulkAtomicUpdateThreadPoolSize }}
+bulkAtomicUpdateThreadPoolQueueSize: {{ vitam.worker.bulkAtomicUpdateThreadPoolQueueSize }}
 {% endif %}
 
 keywordMaxLength: 32766
