story #7041 fix issues

--- a/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
@@ -21,6 +21,7 @@ permissionsWithoutPersonalCertificate:
   - 'units:id:objects:read:json'
   - 'units:id:objects:read:binary'
   - 'units:update'
+  - 'units:update:revert'
   - 'unitsWithInheritedRules:read'
   - 'units:rules:update'
   - 'accesscontracts:create:json'
