--- a/deployment/ansible-vitam/roles/logstash/templates/02-logstash-vitam-filter.conf.j2
+++ b/deployment/ansible-vitam/roles/logstash/templates/02-logstash-vitam-filter.conf.j2
@@ -107,6 +107,9 @@ filter
             overwrite => [ "timestamp" ]
         }
         mutate { add_field => { "logger" => "consul" } }
+        if [log_level] == "ERR" {
+            mutate { replace => { "log_level" => "ERROR" } }
+        }
         date {
             match => [ "timestamp" , "yyyy/MM/dd HH:mm:ss", "MMM dd HH:mm:ss", "MMM  d HH:mm:ss" ]
             target => [ "@timestamp" ]
