Item 6911 : Limit parallel storage log traceability threads

--- a/deployment/ansible-vitam/roles/vitam/templates/storage/storage.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/storage/storage.conf.j2
@@ -13,6 +13,7 @@ offerSyncNumberOfRetries: {{ vitam.storageengine.offerSyncNumberOfRetries }}
 offerSyncFirstAttemptWaitingTime: {{ vitam.storageengine.offerSyncFirstAttemptWaitingTime }}
 offerSyncWaitingTime: {{ vitam.storageengine.offerSyncWaitingTime }}
 storageLogBackupThreadPoolSize: {{ vitam.storageengine.storageLogBackupThreadPoolSize }}
+storageLogTraceabilityThreadPoolSize: {{ vitam.storageengine.storageLogTraceabilityThreadPoolSize }}
 #Basic Authentication
 adminBasicAuth:
 - userName: {{ admin_basic_auth_user }}
