Item 6911 : Limit parallel AccessionRegisterSymbolic creation threads

--- a/deployment/ansible-vitam/roles/vitam/templates/functional-administration/functional-administration.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/functional-administration/functional-administration.conf.j2
@@ -70,3 +70,4 @@ listMinimumRuleDuration:
 {% endfor %}
 {% endif %}
 
+accessionRegisterSymbolicThreadPoolSize: {{ vitam.functional_administration.accessionRegisterSymbolicThreadPoolSize}}
