Item 6911 : Limit parallel rule audit threads

--- a/deployment/ansible-vitam/roles/vitam/templates/functional-administration/functional-administration.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/functional-administration/functional-administration.conf.j2
@@ -71,3 +71,4 @@ listMinimumRuleDuration:
 {% endif %}
 
 accessionRegisterSymbolicThreadPoolSize: {{ vitam.functional_administration.accessionRegisterSymbolicThreadPoolSize}}
+ruleAuditThreadPoolSize: {{ vitam.functional_administration.ruleAuditThreadPoolSize}}
