--- a/deployment/ansible-vitam/roles/vitam/templates/vitam.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/vitam.conf.j2
@@ -44,7 +44,9 @@ indexInheritedRulesWithRulesIdByTenant: [ "{{  vitam.worker.rules_index_tenants 
 
 environmentName: {{ vitam_prefix_offer|default(vitam_site_name) }}
 
-acceptableRequestTime: {{ vitam_struct.vitam_component.acceptableRequestTime|default(10) }}
+acceptableRequestTime: {{ acceptableRequestTime|default(10) }}
+criticalRequestTime: {{ criticalRequestTime|default(60) }}
+requestTimeAlertThrottlingDelay: {{ requestTimeAlertThrottlingDelay|default(60) }}
 
 # Ontology cache settings (max entries in cache & retention timeout in seconds)
 ontologyCacheMaxEntries: {{ vitam.ontologyCacheMaxEntries }}
